--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/danilo/.netbeans/8.0beta/build.properties
+user.properties.file=/Users/mj/Library/Application Support/NetBeans/8.0/build.properties
